# fug

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pulautin.xml
cmake/: component_types.cmake  singleton_types.cmake
demo/CubeDemo/: BeatComponent.cpp  BeatComponent.hpp  BeatVisitor.cpp  BeatVisitor.hpp  ControlMapComponent.hpp  ControlVisitor.cpp  ControlVisitor.hpp  MotionComponent.cpp  MotionVisitor.cpp  MotionVisitor.hpp  TransformVisitor.cpp  TransformVisitor.hpp  main.cpp  main.hpp
demo/DeferredCube/: main.cpp
demo/DeferredPBR/: main.cpp
demo/GameJam2017/: Game.cpp  PlayerInputVisitor.cpp  SpriteMaterial.cpp  SpriteMaterial.hpp  SpriteMaterial_Init.hpp  SpriteMesh.cpp  SpriteMesh.hpp  SpriteMeshComponent.cpp  SpriteMeshComponent.hpp  SpriteMesh_Init.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp
demo/PBRTest/: main.cpp
demo/Primitives/: main.cpp
demo/TexturedCube/: main.cpp
doc/ecs/: Ecs.md
doc/notes/: Ecs.md
ext/: CMakeLists.txt
ext/imgui-fug/: CMakeLists.txt  imgui_impl_sfml_gl3.cpp  imgui_impl_sfml_gl3.h
include/: CMakeLists.txt  CollisionEvent.hpp  CollisionSystem.hpp  CollisionVolume.hpp  EventComponent.hpp  EventHandler.hpp  EventHandlers.hpp  EventSystem.hpp  EventTypeId.hpp  LogicComponent.hpp  LogicSystem.hpp  Logics.hpp  PhysicsComponent.hpp  PhysicsSystem.hpp  SpriteComponent.hpp  SpriteRenderer.hpp  Window.hpp  gl_core_4_1.c  gl_core_4_1.h
include/Core/: BasicEventManager.hpp  BasicEventManager.tcc  BasicResourceManager.hpp  BasicResourceManager.tcc  BasicScene.hpp  BasicScene.tcc  Binary.hpp  Binary_Init_File.hpp  Component.hpp  ComponentMap.hpp  ComponentMap.tcc  Event.hpp  Event.tcc  EventInfo.hpp  EventManager.hpp  EventManager.tcc  Implementation.hpp  JsonUtility.hpp  Log.hpp  Macros.hpp  Mailbox.hpp  Mailbox.tcc  MailboxIterator.hpp  MailboxIterator.tcc  MathTypes.hpp  Resource.hpp  Resource.tcc  ResourceIdMap.hpp  ResourceInitInfoMap.hpp  ResourceManager.hpp  ResourceManager.tcc  ResourcePointer.hpp  ResourcePointer.tcc  Scene.hpp  Scene.tcc  TemplateUtils.hpp  Text.hpp  Text_Init_File.hpp  Types.hpp  Utility.hpp  (+1 more)
include/Engine/: EntityFactory.hpp  ResourceLoader.hpp
include/GameJam2017/: CharacterInfoComponent.hpp  CharacterStateComponent.hpp  Game.hpp  GameJam2017.hpp  PlayerComponent.hpp  PlayerInfoComponent.hpp  PlayerInputVisitor.hpp  ShootEvent.hpp  constants.hpp
include/Graphics/: Camera.hpp  CameraComponent.hpp  CameraVisitor.hpp  Canvas.hpp  Canvas.tcc  Canvas_SFML.hpp  DirectionalLightComponent.hpp  DirectionalLightPass.hpp  DirectionalLightPassVisitor.hpp  GBuffer.hpp  GLenumMap.hpp  GeometryPassVisitor.hpp  LightParameter.hpp  LightShaderBinding.hpp  LightShaderBinding_Init.hpp  Material.hpp  Material_Init.hpp  Material_Init.tcc  Mesh.hpp  MeshComponent.hpp  Mesh_Init.hpp  Mesh_Init.tcc  ModelComponent.hpp  PointLightComponent.hpp  PointLightPass.hpp  PointLightPassVisitor.hpp  RenderExtractor.hpp  RenderObject.hpp  RenderVisitor.hpp  Renderer.hpp  RenderingMatrixType.hpp  ShaderObject.hpp  ShaderObject_Init_Binary.hpp  ShaderObject_Init_Text.hpp  ShaderProgram.hpp  ShaderProgram_Init_Default.hpp  SpriteMaterial.hpp  SpriteMaterial_Init.tcc  SpriteMesh.hpp  SpriteMeshComponent.hpp  (+12 more)
include/Logic/: Box2dBodyComponent.hpp  Box2dBodyComponentFactory.hpp  Box2dBodyDefinition.hpp  Box2dTransformVisitor.hpp  Box2dWorld.hpp  Box2dWorld_Init.hpp  Box2dWorld_Init.tcc  Events.hpp  MotionComponent.hpp  MotionVisitor.hpp  SfmlInputConfig.hpp  SfmlInputConfig_Init.hpp  SfmlInputConfig_Init.tcc  TransformComponent.hpp  TransformVisitor.hpp  createBox2dBody.hpp  createPhysicsBox.hpp
include/Test/: TestComponents.hpp  TestEvents.hpp  TestResources.hpp  TestResources_Init.hpp  TestResources_Init.tcc  TestVisitors.hpp  UnitTests.hpp
include/ecs/: CMakeLists.txt  Ecs.hpp  Ecs.inl  System.hpp  Types.hpp
include/engine/: CMakeLists.txt  EventComponent.hpp  EventHandler.hpp  EventSystem.hpp  EventTypeId.hpp  KeyStates.hpp  Logic.hpp  LogicComponent.hpp  LogicSystem.hpp  Serialization.hpp
include/game/: CMakeLists.txt  CollisionEvent.hpp  EntityIdComponent.hpp  EventHandlers.hpp  Logics.hpp  SpriteRenderer.hpp  SystemComponent.hpp  Window.hpp
include/graphics/: CMakeLists.txt  Orientation2DComponent.hpp  SpriteComponent.hpp  SpriteDrawBufferSingleton.hpp  SpriteDrawComponent.hpp  SpriteSheet.hpp  SpriteSingleton.hpp  SpriteSystem.hpp
include/utils/: CMakeLists.txt  FileUtils.hpp  TypeId.hpp  Types.hpp
res/: cubedemo.stfu  deferred_cube.stfu  deferred_pbr.stfu  entities.stfu  pbr_test.stfu  primitives.stfu  resources.stfu
res/shader/: default_frag.glsl  default_vert.glsl  deferred_dirlight_frag.glsl  deferred_geometry_frag.glsl  deferred_light_vert.glsl  deferred_pbr_directional_light_frag.glsl  deferred_pbr_geometry_frag.glsl  deferred_pbr_point_light_frag.glsl  deferred_point_light_vert.glsl  deferred_pointlight_frag.glsl  pbr_frag.glsl  sprite_frag.glsl  stencil_only_frag.glsl  stencil_vert.glsl
res/shaders/: FS_Sprite.glsl  VS_Sprite.glsl
src/: BasicResourceManager.cpp  BasicResourceManager.hpp  BasicResourceManager.tcc  BasicScene.cpp  BasicScene.hpp  BasicScene.tcc  CMakeLists.txt  CollisionSystem.cpp  CollisionVolume.cpp  Component.cpp  Component.hpp  Container.cpp  Container.hpp  Ecs.cpp  Ecs.hpp  Ecs.inl  EventComponent.cpp  EventHandlers.cpp  EventManager.hpp  EventSystem.cpp  EventTypeId.cpp  Implementation.hpp  LogicComponent.cpp  LogicSystem.cpp  Logics.cpp  Macros.hpp  PhysicsComponent.cpp  PhysicsSystem.cpp  Resource.hpp  Resource.tcc  ResourceManager.hpp  ResourceManager.tcc  ResourcePointer.hpp  ResourcePointer.tcc  Scene.cpp  Scene.hpp  Scene.tcc  SceneImplementation.hpp  ShaderProgram_Init_Default.hpp  SpriteComponent.cpp  (+17 more)
src/Core/: BasicEventManager.cpp  BasicResourceManager.cpp  BasicScene.cpp  Binary.cpp  Component.cpp  ComponentMap.cpp  Event.cpp  JsonUtility.cpp  Log.cpp  ResourceIdMap.cpp  ResourceInitInfoMap.cpp  Text.cpp
src/Engine/: EntityFactory.cpp  ResourceLoader.cpp
test/: CMakeLists.txt  TestSystems.cpp  TestSystems.hpp  Tests.cpp  Tests.hpp  main.cpp
(+89 files in other folders)
